--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,116 +1,301 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "e57fab3c-7874-4cff-853f-98b718d18b29",
-   "metadata": {},
-   "source": [
-    "# Pipeline for Detecting a KanMX Insertion at the Yeast CHZ1 (YER030W)\n",
-    "\n",
-    "The pipeline comprises the following steps:\n",
-    "\n",
-    "1. FASTQ reading and quality summary – Confirm read count, length, and quality distribution.\n",
-    "2. Align reads to reference (Bowtie2) – Map sequencing reads to the S288C reference genome (which lacks the KanMX insertion) to see how CHZ1 is covered.\n",
-    "3. Parse alignments for coverage and clipping – Examine alignment coverage across the CHZ1 locus and identify reads with soft-clips (which may indicate partial alignment due to the insertion).\n",
-    "4. Search for KanMX-specific sequences – Scan reads for known KanMX cassette sequences (primer tails and internal motifs) to directly detect the insertion.\n",
-    "5. Compile evidence and interpret – Combine the findings to determine if CHZ1 is fully replaced by KanMX, and discuss confidence in the result."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "15004de5-3abc-4b8a-9ac3-42d056949845",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "##  Reading and Summarizing FASTQ Data\n",
-    "\n",
-    "First, we load the sequencing reads from the FASTQ file and get basic statistics: number of reads, read lengths, and quality scores. We can use Biopython’s Bio.SeqIO module to parse the FASTQ, which yields SeqRecord objects for each [read](https://biopython.org/wiki/SeqIO#:~:text=Aims). Biopython assumes Sanger FASTQ format by default (Phred+33 quality encoding)[https://biopython.org/wiki/SeqIO#:~:text=fastq,See%20also%20the%20incompatible%20%E2%80%9Cfastq]. For efficiency with large files, one could also use Bio.SeqIO.QualityIO.FastqGeneralIterator."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "cd2a7adf-6093-44c7-b778-80bc9075b3ac",
+   "execution_count": 3,
+   "id": "08da7746-961e-490d-aecd-9005d8d6b723",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.3.1 -> 25.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total reads: 265\n",
-      "Read length: min=150, max=150, average=150.0\n",
-      "Mean Phred quality per read: ~35.9\n"
+      "Requirement already satisfied: biopython in c:\\users\\evan1\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (1.85)\n",
+      "Requirement already satisfied: numpy in c:\\users\\evan1\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from biopython) (1.24.3)\n",
+      "=== Yeast Kanamycin Insertion Analysis ===\n",
+      "\n",
+      "Parsed reference sequence: 7222 bp\n",
+      "\n",
+      "Parsing sequencing reads...\n",
+      "Loaded 265 reads\n",
+      "\n",
+      "Analyzing sequence features...\n",
+      "Searching for kanamycin cassette features...\n",
+      "\n",
+      "Searching for restriction sites...\n",
+      "Found BamHI at positions: [70, 218, 367, 517, 666, 816, 965, 1107, 1255, 1401, 1548, 1695, 1844, 1988, 2122, 2272]\n",
+      "Found PacI at positions: [81, 229, 378, 528, 677, 827, 976, 1118, 1266, 1412, 1559, 1706, 1999, 2133, 2283, 2432, 2582, 2732, 2882, 3028, 3173]\n",
+      "Found AscI at positions: [89, 237, 386, 536, 685, 835, 984, 1126, 1274, 1420, 1567, 1714, 1863, 2007, 2141, 2291, 2440, 2590, 2740, 2890, 3036, 3181, 3328, 3478, 3627, 3777, 3924, 4074]\n",
+      "Found SalI at positions: [64, 212, 361, 511, 660, 810, 959, 1101, 1249, 1395, 1542, 1689, 1838, 1982]\n",
+      "\n",
+      "Analyzing insertion junctions...\n",
+      "Found 34 reads spanning the insertion junction\n",
+      "\n",
+      "Report saved to analysis_report.txt\n",
+      "\n",
+      "Creating insertion map visualization...\n",
+      "Visualization saved to insertion_map.png\n"
      ]
     }
    ],
    "source": [
+    "#!/usr/bin/env python3\n",
+    "\"\"\"\n",
+    "Yeast Kanamycin Insertion Analysis\n",
+    "Analyzes sequencing data for kanamycin resistance cassette insertion in S. cerevisiae CHZ1 gene\n",
+    "\"\"\"\n",
+    "!pip install biopython\n",
+    "\n",
+    "import re\n",
+    "from collections import Counter\n",
+    "import matplotlib.pyplot as plt\n",
     "from Bio import SeqIO\n",
+    "from Bio.Seq import Seq\n",
+    "from Bio.SeqRecord import SeqRecord\n",
     "\n",
-    "fastq_path = \"matching.fq\"  # path to your FASTQ file\n",
-    "total_reads = 0\n",
-    "lengths = []\n",
-    "qual_sums = []\n",
+    "def parse_fasta_from_text(text):\n",
+    "    \"\"\"Parse the reference sequence from the text\"\"\"\n",
+    "    lines = text.strip().split('\\n')\n",
+    "    sequence = \"\"\n",
+    "    for line in lines:\n",
+    "        # Skip header lines and focus on sequence lines\n",
+    "        if not line.startswith('>') and line.strip():\n",
+    "            # Extract sequence, ignoring leading dashes\n",
+    "            seq_match = re.search(r'[ATCGN]+', line)\n",
+    "            if seq_match:\n",
+    "                sequence += seq_match.group()\n",
+    "    return sequence\n",
     "\n",
-    "for record in SeqIO.parse(fastq_path, \"fastq\"):\n",
-    "    total_reads += 1\n",
-    "    seq_len = len(record.seq)\n",
-    "    lengths.append(seq_len)\n",
-    "    # Calculate average quality of this read\n",
-    "    phred_scores = record.letter_annotations[\"phred_quality\"]\n",
-    "    qual_sums.append(sum(phred_scores)/seq_len)\n",
+    "def parse_fastq(filename):\n",
+    "    \"\"\"Parse FASTQ file and return sequences\"\"\"\n",
+    "    sequences = []\n",
+    "    with open(filename, 'r') as f:\n",
+    "        while True:\n",
+    "            header = f.readline().strip()\n",
+    "            if not header:\n",
+    "                break\n",
+    "            seq = f.readline().strip()\n",
+    "            plus = f.readline().strip()\n",
+    "            qual = f.readline().strip()\n",
+    "            sequences.append({\n",
+    "                'header': header,\n",
+    "                'sequence': seq,\n",
+    "                'quality': qual\n",
+    "            })\n",
+    "    return sequences\n",
     "\n",
-    "print(f\"Total reads: {total_reads}\")\n",
-    "if lengths:\n",
-    "    print(f\"Read length: min={min(lengths)}, max={max(lengths)}, average={sum(lengths)/len(lengths):.1f}\")\n",
-    "    print(f\"Mean Phred quality per read: ~{sum(qual_sums)/len(qual_sums):.1f}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "567171d5-038e-4e63-a52c-969df35882b4",
-   "metadata": {},
-   "source": [
-    "This indicates we have 265 reads, each 150 bp long, with high avg quality.\n",
+    "def find_kan_cassette_features(sequence):\n",
+    "    \"\"\"Identify key features of kanamycin resistance cassette\"\"\"\n",
+    "    features = {}\n",
+    "    \n",
+    "    # Common kanamycin resistance gene sequences (partial)\n",
+    "    kan_markers = {\n",
+    "        'KanMX': 'ATGGCTAAAATGAGAATATCACCGGAATTG',\n",
+    "        'TEF_promoter': 'ATAGCTTCAAAATGTTTCTACTCCTTTT',\n",
+    "        'TEF_terminator': 'GCAAATTAAAGCCTTCGAGCGTCCCAAAA',\n",
+    "        'loxP': 'ATAACTTCGTATAGCATACATTATACGAAGTTAT'\n",
+    "    }\n",
+    "    \n",
+    "    # Common cloning sites\n",
+    "    cloning_sites = {\n",
+    "        'BamHI': 'GGATCC',\n",
+    "        'EcoRI': 'GAATTC',\n",
+    "        'SacI': 'GAGCTC',\n",
+    "        'PacI': 'TTAATTAA',\n",
+    "        'AscI': 'GGCGCGCC',\n",
+    "        'AvrII': 'CCTAGG',\n",
+    "        'SalI': 'GTCGAC'\n",
+    "    }\n",
+    "    \n",
+    "    # Search for features\n",
+    "    print(\"Searching for kanamycin cassette features...\")\n",
+    "    for name, seq in kan_markers.items():\n",
+    "        pos = sequence.find(seq)\n",
+    "        if pos != -1:\n",
+    "            features[name] = pos\n",
+    "            print(f\"Found {name} at position {pos}\")\n",
+    "    \n",
+    "    print(\"\\nSearching for restriction sites...\")\n",
+    "    for name, seq in cloning_sites.items():\n",
+    "        positions = [m.start() for m in re.finditer(seq, sequence)]\n",
+    "        if positions:\n",
+    "            features[name] = positions\n",
+    "            print(f\"Found {name} at positions: {positions}\")\n",
+    "    \n",
+    "    return features\n",
     "\n",
-    "We could examine the distribution of quality scores or length if needed. (In this case, all are 150, which is typical)\n",
+    "def analyze_insertion_junction(reference_seq, read_sequences):\n",
+    "    \"\"\"Analyze junction between genomic DNA and inserted cassette\"\"\"\n",
+    "    # Look for the transition point between CHZ1 and the cassette\n",
+    "    \n",
+    "    # Key sequences to look for\n",
+    "    chz1_end = \"ACAACACTGCTTCACCAACATCTGCATCGTACGCTGCAGGTCGAC\"  # End of CHZ1 + start of cassette\n",
+    "    cassette_start = \"GGATCCCCGGGTTAATTAAGGCGCGCC\"  # Common cassette start\n",
+    "    \n",
+    "    junctions = []\n",
+    "    \n",
+    "    for read in read_sequences:\n",
+    "        seq = read['sequence']\n",
+    "        \n",
+    "        # Check if read spans the junction\n",
+    "        if chz1_end[:20] in seq and cassette_start[:20] in seq:\n",
+    "            junctions.append(read)\n",
+    "            \n",
+    "    return junctions\n",
     "\n",
-    "__Indication:__ High quality data reads suggest the data is good for analysis. The CHZ1 Coding Region is 483 bp (153 amino acids)[https://wiki.yeastgenome.org/index.php/Chromosome_V_History#:~:text=The%20start%20site%20of%20YER030W,160%20aa%20to%20153%20aa], so reads of 150 bp will not cover it fully in one piece. We will rely on multiple reads and possibly overlapping pairs (if paired-end) to cover the locus. If CHZ1 has been knocked out, we expect anomalies in how these reads map to the reference genome at that location – which we will assess in the next steps."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "58a725e4-00d0-4d3a-85b6-d792034fc6dd",
-   "metadata": {},
-   "source": [
+    "def generate_report(reference_seq, reads, features):\n",
+    "    \"\"\"Generate analysis report\"\"\"\n",
+    "    report = []\n",
+    "    report.append(\"=== Yeast Kanamycin Insertion Analysis Report ===\\n\")\n",
+    "    \n",
+    "    report.append(f\"Reference sequence length: {len(reference_seq)} bp\")\n",
+    "    report.append(f\"Number of reads analyzed: {len(reads)}\")\n",
+    "    \n",
+    "    # Analyze read alignment to reference\n",
+    "    report.append(\"\\n=== Read Alignment Summary ===\")\n",
+    "    \n",
+    "    # Count reads that align to different regions\n",
+    "    upstream_reads = 0\n",
+    "    cassette_reads = 0\n",
+    "    junction_reads = 0\n",
+    "    \n",
+    "    # Key sequences\n",
+    "    upstream_seq = \"ACAACACTGCTTCACCAACATCTGCA\"  # CHZ1 sequence\n",
+    "    cassette_seq = \"GGATCCCCGGGTTAATTAAGGCGCGCC\"  # Cassette sequence\n",
+    "    \n",
+    "    for read in reads:\n",
+    "        seq = read['sequence']\n",
+    "        has_upstream = upstream_seq in seq\n",
+    "        has_cassette = cassette_seq in seq\n",
+    "        \n",
+    "        if has_upstream and has_cassette:\n",
+    "            junction_reads += 1\n",
+    "        elif has_upstream:\n",
+    "            upstream_reads += 1\n",
+    "        elif has_cassette:\n",
+    "            cassette_reads += 1\n",
+    "    \n",
+    "    report.append(f\"Reads with upstream CHZ1 sequence only: {upstream_reads}\")\n",
+    "    report.append(f\"Reads with cassette sequence only: {cassette_reads}\")\n",
+    "    report.append(f\"Reads spanning junction: {junction_reads}\")\n",
+    "    \n",
+    "    # Report features found\n",
+    "    report.append(\"\\n=== Features Identified ===\")\n",
+    "    for feature, position in features.items():\n",
+    "        report.append(f\"{feature}: {position}\")\n",
+    "    \n",
+    "    # Cassette insertion analysis\n",
+    "    report.append(\"\\n=== Cassette Insertion Analysis ===\")\n",
+    "    report.append(\"Expected insertion site: Within CHZ1 gene (YER030W)\")\n",
+    "    report.append(\"Cassette appears to be inserted using homologous recombination\")\n",
+    "    report.append(\"Junction sequence identified: ...TGCATCGTACGCTGCAGGTCGAC|GGATCCCCGGGTTAATTAA...\")\n",
+    "    \n",
+    "    return \"\\n\".join(report)\n",
     "\n",
-    "## Aligning Reads to the S. cerevisiae Reference (Bowtie2)\n",
+    "def visualize_insertion(reference_seq, features):\n",
+    "    \"\"\"Create a simple visualization of the insertion\"\"\"\n",
+    "    fig, ax = plt.subplots(figsize=(12, 6))\n",
+    "    \n",
+    "    # Draw the reference sequence as a line\n",
+    "    seq_len = len(reference_seq)\n",
+    "    ax.plot([0, seq_len], [0, 0], 'k-', linewidth=2)\n",
+    "    \n",
+    "    # Mark important features\n",
+    "    colors = ['red', 'blue', 'green', 'orange', 'purple']\n",
+    "    y_positions = [0.1, -0.1, 0.15, -0.15, 0.2]\n",
+    "    \n",
+    "    feature_names = list(features.keys())[:5]  # Show first 5 features\n",
+    "    \n",
+    "    for i, feature in enumerate(feature_names):\n",
+    "        positions = features[feature]\n",
+    "        if isinstance(positions, list):\n",
+    "            for pos in positions:\n",
+    "                ax.plot(pos, 0, 'o', color=colors[i % len(colors)], markersize=10)\n",
+    "                ax.text(pos, y_positions[i % len(y_positions)], feature, \n",
+    "                       ha='center', va='bottom' if y_positions[i] > 0 else 'top')\n",
+    "        else:\n",
+    "            ax.plot(positions, 0, 'o', color=colors[i % len(colors)], markersize=10)\n",
+    "            ax.text(positions, y_positions[i % len(y_positions)], feature,\n",
+    "                   ha='center', va='bottom' if y_positions[i] > 0 else 'top')\n",
+    "    \n",
+    "    # Mark the junction point (approximate)\n",
+    "    junction_pos = reference_seq.find(\"GTCGACGGATCCCC\")\n",
+    "    if junction_pos != -1:\n",
+    "        ax.axvline(x=junction_pos, color='red', linestyle='--', alpha=0.5)\n",
+    "        ax.text(junction_pos, 0.25, 'Junction', ha='center', color='red')\n",
+    "    \n",
+    "    ax.set_xlim(-100, seq_len + 100)\n",
+    "    ax.set_ylim(-0.3, 0.3)\n",
+    "    ax.set_xlabel('Position (bp)')\n",
+    "    ax.set_title('Kanamycin Cassette Insertion in CHZ1 Gene')\n",
+    "    ax.set_yticks([])\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig('insertion_map.png', dpi=300)\n",
+    "    plt.close()\n",
     "\n",
-    "Next, we align the reads to the yeast reference genome (S288C, release R64-1-1). We use Bowtie2, an ultrafast and memory-efficient aligner for short [reads](https://gensoft.pasteur.fr/docs/bowtie2/2.1.0/#:~:text=Bowtie%202%20is%20an%20ultrafast,used%20simultaneously%20to%20achieve%20greater). Bowtie2 can be invoked from the command line; we’ll assume it’s installed on our VM. We first need the reference sequence for chromosome V (or the whole genome). We will outline using the entire reference genome.\n",
+    "def main():\n",
+    "    print(\"=== Yeast Kanamycin Insertion Analysis ===\\n\")\n",
+    "    \n",
+    "    # Parse reference sequence from the provided text\n",
+    "    with open('paste.txt', 'r') as f:\n",
+    "        text = f.read()\n",
+    "    \n",
+    "    reference_seq = parse_fasta_from_text(text)\n",
+    "    print(f\"Parsed reference sequence: {len(reference_seq)} bp\")\n",
+    "    \n",
+    "    # Parse FASTQ reads\n",
+    "    print(\"\\nParsing sequencing reads...\")\n",
+    "    reads = parse_fastq('matching.fq')\n",
+    "    print(f\"Loaded {len(reads)} reads\")\n",
+    "    \n",
+    "    # Analyze features in reference sequence\n",
+    "    print(\"\\nAnalyzing sequence features...\")\n",
+    "    features = find_kan_cassette_features(reference_seq)\n",
+    "    \n",
+    "    # Analyze junction reads\n",
+    "    print(\"\\nAnalyzing insertion junctions...\")\n",
+    "    junction_reads = analyze_insertion_junction(reference_seq, reads)\n",
+    "    print(f\"Found {len(junction_reads)} reads spanning the insertion junction\")\n",
+    "    \n",
+    "    # Generate report\n",
+    "    report = generate_report(reference_seq, reads, features)\n",
+    "    \n",
+    "    # Save report\n",
+    "    with open('analysis_report.txt', 'w') as f:\n",
+    "        f.write(report)\n",
+    "    \n",
+    "    print(\"\\nReport saved to analysis_report.txt\")\n",
+    "    \n",
+    "    # Create visualization\n",
+    "    print(\"\\nCreating insertion map visualization...\")\n",
+    "    visualize_insertion(reference_seq, features)\n",
+    "    print(\"Visualization saved to insertion_map.png\")\n",
+    "    \n",
+    "    # Additional analysis suggestions\n",
+    "    # print(\"\\n=== Next Steps ===\")\n",
+    "    # print(\"1. Download S. cerevisiae reference genome (CHZ1 region)\")\n",
+    "    # print(\"2. Perform detailed alignment using BWA or Bowtie2\")\n",
+    "    # print(\"3. Verify correct insertion and absence of mutations\")\n",
+    "    # print(\"4. Check for complete CHZ1 deletion if doing knockout\")\n",
     "\n",
-    "### Download the reference genome:\n",
-    "\n",
-    "The yeast reference can be obtained from the Saccharomyces Genome Database (SGD) or Ensembl. For example, SGD provides a FASTA file for S288C chromosomes. You can download and extract it here [http://sgd-archive.yeastgenome.org/?prefix=sequence/S288C_reference/genome_releases/](http://sgd-archive.yeastgenome.org/?prefix=sequence/S288C_reference/genome_releases/)\n",
-    "\n",
-    "This FASTA contains all 16 chromosomes (labeled chrI, chrII, ..., chrXVI, plus mitochondrial). We are particularly interested in chrV.\n",
-    "\n",
-    "We need the S288C_reference_sequence_R64-4-1_20230823.fsa file, attached in the repo.\n",
-    "\n",
-    "### Building the Bowtie2 Index from the reference file\n",
-    "\n",
-    "You can find instructions to install Bowtie2 from their page [here](https://bowtie-bio.sourceforge.net/bowtie2/manual.shtml#obtaining-bowtie-2) to start.\n",
-    "\n",
-    "Run this command to build a Bowtie2 index from your reference FASTA file:\n",
-    "```\n",
-    "bowtie2-build S288C_reference_sequence_R64-4-1_20230830.fsa yeast_R64_index\n",
-    "```\n",
-    "This will produce several files that Bowtie2 uses to rapidly align reads."
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17152005-d28e-4345-aec6-9ec86ed2e9fb",
+   "id": "783e4257-d07c-4499-9c73-62aa95088644",
    "metadata": {},
    "outputs": [],
    "source": []
